--- a/portfolio.html
+++ b/portfolio.html
@@ -202,7 +202,7 @@
         </div>
       </script>
     </div>
-    <div class="main-menu">
+    <div class="main-menu main-menu--hide">
       <div class="main-menu__left"></div>
       <div class="main-menu__right"></div>
       <div class="main-menu__content">
