--- a/about.html
+++ b/about.html
@@ -160,7 +160,7 @@
         </div>
       </script>
     </div>
-    <div class="main-menu">
+    <div class="main-menu main-menu--hide">
       <div class="main-menu__left"></div>
       <div class="main-menu__right"></div>
       <div class="main-menu__content">
