Добавил parallax на все страницы

--- a/about.html
+++ b/about.html
@@ -29,7 +29,20 @@
               <button class="hamburger hamburger--collapse" type="button" id="hamburger-menu"><span class="hamburger-box"><span class="hamburger-inner"></span></span></button>
             </div>
           </header>
-          <div class="hero__content"><img class="title-img" src="/assets/images/titles/portfolio-header.png" alt="page title"/>
+          <div class="hero__content">
+            <div class="parallax">
+              <div class="parallax__layer"><img class="parallax__image" src="assets/images/bg/parallax/layer-1.png"></div>
+              <div class="parallax__layer"><img class="parallax__image" src="assets/images/bg/parallax/layer-2.png"></div>
+              <div class="parallax__layer"><img class="parallax__image" src="assets/images/bg/parallax/layer-3.png"></div>
+              <div class="parallax__layer"><img class="parallax__image" src="assets/images/bg/parallax/layer-4.png"></div>
+              <div class="parallax__layer"><img class="parallax__image" src="assets/images/bg/parallax/layer-5.png"></div>
+              <div class="parallax__layer"><img class="parallax__image" src="assets/images/bg/parallax/layer-6.png"></div>
+              <div class="parallax__layer"><img class="parallax__image" src="assets/images/bg/parallax/layer-7.png"></div>
+              <div class="parallax__layer"><img class="parallax__image" src="assets/images/bg/parallax/layer-8.png"></div>
+              <div class="parallax__layer"><img class="parallax__image" src="assets/images/bg/parallax/layer-9.png"></div>
+              <div class="parallax__layer"><img class="parallax__image" src="assets/images/bg/parallax/layer-10.png"></div>
+              <div class="parallax__content"></div>
+            </div><img class="title-img" src="/assets/images/titles/portfolio-header.png" alt="page title"/>
             <div class="hero__user-desc">
               <div class="user">
                 <div class="user__pic-container">
