--- a/index.html
+++ b/index.html
@@ -13,6 +13,18 @@
     .inlined-svg
     -->
     <section class="login">
+      <div class="parallax">
+        <div class="parallax__layer"><img class="parallax__image" src="assets/images/bg/parallax/layer-1.png"></div>
+        <div class="parallax__layer"><img class="parallax__image" src="assets/images/bg/parallax/layer-2.png"></div>
+        <div class="parallax__layer"><img class="parallax__image" src="assets/images/bg/parallax/layer-3.png"></div>
+        <div class="parallax__layer"><img class="parallax__image" src="assets/images/bg/parallax/layer-4.png"></div>
+        <div class="parallax__layer"><img class="parallax__image" src="assets/images/bg/parallax/layer-5.png"></div>
+        <div class="parallax__layer"><img class="parallax__image" src="assets/images/bg/parallax/layer-6.png"></div>
+        <div class="parallax__layer"><img class="parallax__image" src="assets/images/bg/parallax/layer-7.png"></div>
+        <div class="parallax__layer"><img class="parallax__image" src="assets/images/bg/parallax/layer-8.png"></div>
+        <div class="parallax__layer"><img class="parallax__image" src="assets/images/bg/parallax/layer-9.png"></div>
+        <div class="parallax__layer"><img class="parallax__image" src="assets/images/bg/parallax/layer-10.png"></div>
+      </div>
       <div class="login__header">
         <div class="button button--white">Авторизоваться</div>
       </div>
@@ -52,6 +64,7 @@
       </div>
       <div class="login__footer">© Лашин Александр | создано с любовью в LoftSchool | 2019</div>
     </section>
+    <script src="auth.bundle.js"></script>
     <script src="auth.bundle.js"></script>
   </body>
 </html>
