--- a/blog.html
+++ b/blog.html
@@ -30,6 +30,19 @@
             </div>
           </header>
           <div class="hero__content">
+            <div class="parallax">
+              <div class="parallax__layer"><img class="parallax__image" src="assets/images/bg/parallax/layer-1.png"></div>
+              <div class="parallax__layer"><img class="parallax__image" src="assets/images/bg/parallax/layer-2.png"></div>
+              <div class="parallax__layer"><img class="parallax__image" src="assets/images/bg/parallax/layer-3.png"></div>
+              <div class="parallax__layer"><img class="parallax__image" src="assets/images/bg/parallax/layer-4.png"></div>
+              <div class="parallax__layer"><img class="parallax__image" src="assets/images/bg/parallax/layer-5.png"></div>
+              <div class="parallax__layer"><img class="parallax__image" src="assets/images/bg/parallax/layer-6.png"></div>
+              <div class="parallax__layer"><img class="parallax__image" src="assets/images/bg/parallax/layer-7.png"></div>
+              <div class="parallax__layer"><img class="parallax__image" src="assets/images/bg/parallax/layer-8.png"></div>
+              <div class="parallax__layer"><img class="parallax__image" src="assets/images/bg/parallax/layer-9.png"></div>
+              <div class="parallax__layer"><img class="parallax__image" src="assets/images/bg/parallax/layer-10.png"></div>
+              <div class="parallax__content"></div>
+            </div>
             <div class="hero__user-desc">
               <div class="user">
                 <div class="user__pic-container">
